--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,14 @@ python:
 before_install:
   - pip install -r requirements.txt
 
+addons:
+  sonarcloud:
+    organization: "bhaskar-kamble-github"
+
 script:
   - python NormalModesAnimator.py
+  - sonar-scanner
+
+
+
+
